--- a/index.ipynb
+++ b/index.ipynb
@@ -529,7 +529,8 @@
     "    if a[t]['distance'] == b[k]:\n",
     "        c.append(a[t])\n",
     "        k += 1\n",
-    "        \n",
+    "    else:\n",
+    "        k = 0\n",
     "        \n",
     "    \n",
     "c\n",
