automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,18 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
-       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,8 +527,6 @@
     "    if a[t]['distance'] == b[k]:\n",
     "        c.append(a[t])\n",
     "        k += 1\n",
-    "    else:\n",
-    "        k = 0\n",
     "        \n",
     "    \n",
     "c\n",
